Bug 337294 - User image is not scaled
Summary: User image is not scaled
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_useraccount (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-09 21:21 UTC by Elias Probst
Modified: 2014-12-27 22:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of useraccount KCM with unscaled user image (154.60 KB, image/png)
2014-07-09 21:21 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2014-07-09 21:21:55 UTC
Created attachment 87667 [details]
Screenshot of useraccount KCM with unscaled user image

Since the recent changes in the useraccount KCM, the user image is not scaled anymore (see attached screenshot).
It's using ~/.face.icon which is a 464x487 JPG.

vHanda: added you CC as I think you were mostly involved in the recent changes…
Comment 1 Elias Probst 2014-12-27 22:30:06 UTC
Git commit d406a1ebc88a9aad31a6923fd5ef0e66dd0eb497 by Elias Probst.
Committed on 27/12/2014 at 22:28.
Pushed by eliasp into branch 'master'.

Scale down oversized face pixmaps.

M  +1    -1    kcms/useraccount/main.cpp

http://commits.kde.org/plasma-desktop/d406a1ebc88a9aad31a6923fd5ef0e66dd0eb497