Scale down oversized face pixmaps.

BUG: 337294